# rc_simulator

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REPO_STANDARD.md  SECURITY.md  SUPPORT.md  TECHNICAL_GUIDE.md  VERSION_STACK.md  install.bat  install.sh  pyproject.toml  rc-simulator.spec  requirements.txt  run.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: codeql.yml  lint.yml  secret-scanning.yml  security.yml  tests.yml
assets/icons/: README.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  ui-ux-audit-2026-04-14.md
docs/superpowers/plans/: 2026-04-14-repo-hardening.md
ops/: README.md  install.cmd  install.ps1  install.sh
ops/linux/: README.md  camera_receive.sh  install.sh  install_launcher.sh  install_service.sh  run.sh
ops/linux/desktop/: rc-simulator.desktop
ops/linux/services/: moza_udp_client.service  moza_udp_client.service.in
ops/windows/: install_shortcut.cmd  install_shortcut.ps1  run_rc_simulator.cmd  uninstall_shortcut.cmd  uninstall_shortcut.ps1
scripts/: audit_layout.py  bootstrap_venv.sh  build-win.bat  dev-verify.sh  moza_udp_client.py  run_state_shim.py  services.py
src/rc_simulator/: __main__.py  __main_headless__.py  qt.py
src/rc_simulator/adapters/: qt_settings.py  video_gst.py
src/rc_simulator/app/: bootstrap.py  ports.py  session_controller.py
src/rc_simulator/core/: config.py  control_config.py  events.py  models.py  queue_utils.py  settings.py  state.py
src/rc_simulator/ports/: video.py
src/rc_simulator/resources/: __init__.py
src/rc_simulator/resources/icons/: __init__.py
src/rc_simulator/services/: __init__.py  control_math.py  control_session.py  discovery.py  steer_unwrap.py
src/rc_simulator/ui_qt/: app.py  strings.py
src/rc_simulator/ui_qt/components/: banner.py  docks.py  header.py  hud.py  splash.py
src/rc_simulator/ui_qt/styles/: theme_qss.py
src/rc_simulator/ui_qt/views/: _cars_panel.py  _drive_surface.py  _layout_manager.py  _log_panel.py  _queue_drain.py  _session_panel.py  main_window.py
tests/: test_architecture.py  test_control_config.py  test_control_math.py  test_event_queue_backpressure.py  test_events.py  test_i18n_ui_no_hardcoded_strings.py  test_layout_hygiene.py  test_ports_video.py  test_state.py  test_steer_unwrap.py  test_ui_diagnostics.py  test_ui_layout_invariants.py  test_ui_queue_drain.py  test_ui_shortcuts_and_states.py  test_ui_strings_language.py  test_video_retry_generation.py
