[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-simulator"
version = "0.1.0"
description = "RC Simulator (Qt / PySide6 frontend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.11",
  "evdev; platform_system == 'Linux'",
]

[project.optional-dependencies]
# Dependencias opcionales que dependen del SO / entorno.
# El video embebido usa GI/GStreamer (normalmente provisto por el sistema en Linux).
video = []
dev = [
  "ruff>=0.15.10",
  "pytest>=9.0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]
include = ["*.py", "src/**/*.py", "tests/**/*.py"]
extend-exclude = [
  "src/rc_simulator.egg-info",
  ".venv",
  ".pytest_cache",
  ".ruff_cache",
]
respect-gitignore = false

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.format]
quote-style = "double"

