[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-simulator"
version = "0.1.0"
description = "RC Simulator (Qt / PySide6 frontend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.11",
  "evdev; platform_system == 'Linux'",
]

[project.scripts]
rc-simulator = "rc_simulator.ui_qt.app:main"
rc-simulator-headless = "rc_simulator.__main_headless__:main"

[project.optional-dependencies]
# Optional dependencies that depend on OS / environment.
# Embedded video uses GI/GStreamer (typically provided by system packages on Linux).
video = []
dev = [
  "ruff>=0.6",
  "pytest>=8",
  # Reproducible dev envs / supply chain
  "pip-tools>=7",
  "pip-audit>=2.7",
  "cyclonedx-bom>=4.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rc_simulator" = [
  "resources/**/*.svg",
  "resources/**/*.ico",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]
include = ["*.py", "src/**/*.py", "tests/**/*.py"]
extend-exclude = [
  "src/rc_simulator.egg-info",
  ".venv",
  ".pytest_cache",
  ".ruff_cache",
]
respect-gitignore = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.format]
quote-style = "double"

